--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ logs/
 __pycache__/
 .pytest_cache/
 *.pyc
+# Local Streamlit secrets (never commit real secrets)
+.streamlit/secrets.toml
+config/secrets.toml
