add trial section in airtable

--- a/config/.env.example
+++ b/config/.env.example
@@ -7,3 +7,5 @@ AIRTABLE_VIEW=
 AIRTABLE_CACHE_PATH=data/airtable_mapping.json
 # Approvals table name (used by app bulk approvals sync)
 AIRTABLE_APPROVALS_TABLE=Approvals
+## Background sync interval (seconds) for approvals -> Airtable
+#AIRTABLE_SYNC_INTERVAL_SECONDS=300
